# Runtime

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  changelog.md  vcpkg.json
.github/workflows/: tests.yml
src/: CMakeLists.txt  Runtime.cpp  Runtime.h  Runtime.h.in  Runtime.hpp.in  flowgraph.cpp  flowgraph.h
src/compiler/: #interpreter.cpp#  ast.h  exceptions.h  interpreter.cpp  interpreter.h  memoryexplorer.h  object.h  parser.cpp  parser.h  shared_libs.cpp  shared_libs.h  symbol_table.cpp  symbol_table.h  tokenizer.cpp  tokenizer.h  utils.h
src/compiler/Lib/: StandardLibrary.h
src/compiler/Stlib/: StandardFiles.h  StandardIO.h  StandardLibrary.h  StandardMath.h
src/lib/: ExtendedMath.rnt
tests/: CMakeLists.txt  a.c  interpreter_tests.cpp  interpreter_tests.h  library_tests.cpp  parser_tests.cpp  parser_tests.h  shared_library_tests.cpp  test.rnt  tokenizer_tests.cpp  tokenizer_tests.h
